Fixed dropdown caret and content overlapping issue for Chrome

--- a/src/styles/base/_breadcrumbs.scss
+++ b/src/styles/base/_breadcrumbs.scss
@@ -119,7 +119,7 @@
     }
 
     &:not(.breadcrumb-back, :last-child)::after {
-      padding: 0 10px 0 5px;
+      padding: 0 10px 0 0;
       content: '\203A';
 
       .dark-theme &,
