--- a/src/styles/components/_global-account-selector.scss
+++ b/src/styles/components/_global-account-selector.scss
@@ -5,6 +5,10 @@
   }
 
   .dropdown-toggle {
+    display: flex;
+    flex-wrap: nowrap;
+    align-items: center;
+
     :first-child {
       float: left;
       width: 100%;
