--- a/src/styles/components/layout/_content.scss
+++ b/src/styles/components/layout/_content.scss
@@ -7,8 +7,8 @@
 
   &__header {
     display: flex;
-    flex-wrap: nowrap;
     margin: 0 0 10px;
+    flex-wrap: nowrap;
     align-items: center;
 
     .btn-toolbar {
@@ -16,8 +16,8 @@
     }
 
     .global-account-selector {
+      min-width: 0;
       flex: 1;
-      width: 0;
 
       h1 {
         margin: 0;
